añadido imagen y modificado index

--- a/index.html
+++ b/index.html
@@ -58,6 +58,18 @@
 							</div>
 						</section>
 						<section>
+							<a href="#" class="image"><img src="images/consigue.jpg" alt="" data-position="center center" /></a>
+							<div class="content">
+								<div class="inner">
+									<h2>Proyecto ConsigueVentas</h2>
+									<p>Esta es una pagina web que realize en Wordpress usando Elementor y varios plugins. </p>
+									<ul class="actions">
+										<li><a href="https://consigueventas.com/" class="button">Ver mas</a></li>
+									</ul>
+								</div>
+							</div>
+						</section>
+						<section>
 							<a href="#" class="image"><img src="images/blog_alex.jpg" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
